[FIX]Fixed minor bugs + updated swagger
